--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World BABY</title>
+    <title>Terminal</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.15.0/css/xterm.css" />
 </head>
 <body>
-    <h1>Hello World BABY</h1>
+    <div id="terminal" style="width: 100%; height: 100vh;"></div>
+    <script src="https://cdn.jsdelivr.net/npm/xterm@4.15.0/lib/xterm.js"></script>
+    <script>
+        const term = new Terminal();
+        term.open(document.getElementById('terminal'));
+
+        const socket = new WebSocket('ws://' + window.location.host);
+
+        socket.onmessage = (event) => {
+            term.write(event.data);
+        };
+
+        term.onData(data => {
+            socket.send(data);
+        });
+    </script>
 </body>
 </html>
