--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         const term = new Terminal();
         term.open(document.getElementById('terminal'));
 
-        const socket = new WebSocket('wss://'+ window.location.host); 
+        // WebSocket connection to Cloudflare Worker
+        const socket = new WebSocket('wss://small-queen-8744.tempest-d22.workers.dev/');
+
+        socket.onopen = () => {
+            console.log('WebSocket connection established.');
+        };
 
         socket.onmessage = (event) => {
             term.write(event.data);
@@ -21,6 +26,14 @@
         term.onData(data => {
             socket.send(data);
         });
+
+        socket.onerror = (error) => {
+            console.error('WebSocket error:', error);
+        };
+
+        socket.onclose = () => {
+            console.log('WebSocket connection closed.');
+        };
     </script>
 </body>
 </html>
