--- a/index.html
+++ b/index.html
@@ -2,38 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Terminal</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.15.0/css/xterm.css" />
+    <title>Hello, World!</title>
 </head>
 <body>
-    <div id="terminal" style="width: 100%; height: 100vh;"></div>
-    <script src="https://cdn.jsdelivr.net/npm/xterm@4.15.0/lib/xterm.js"></script>
-    <script>
-        const term = new Terminal();
-        term.open(document.getElementById('terminal'));
-
-        // WebSocket connection to Cloudflare Worker
-        const socket = new WebSocket('wss://small-queen-8744.tempest-d22.workers.dev/');
-
-        socket.onopen = () => {
-            console.log('WebSocket connection established.');
-        };
-
-        socket.onmessage = (event) => {
-            term.write(event.data);
-        };
-
-        term.onData(data => {
-            socket.send(data);
-        });
-
-        socket.onerror = (error) => {
-            console.error('WebSocket error:', error);
-        };
-
-        socket.onclose = () => {
-            console.log('WebSocket connection closed.');
-        };
-    </script>
+    <h1>Hello, World!</h1>
+    <p>This is a simple HTML document.</p>
 </body>
 </html>
