--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello, World!</title>
-</head>
-<body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple HTML document.</p>
-</body>
-</html>
+@page "/"
+@using BlazorTerminal
+@using BlazorTerminal.Models
+
+<h1>Welcome to My Blazor Terminal</h1>
+
+<Terminal TerminalState="terminalState" OnInput="HandleInput" />
+
+@code {
+    private TerminalState terminalState = new TerminalState
+    {
+        Username = "user",
+        PromptString = "$",
+        IsEnabled = true
+    };
+
+    private void HandleInput(string input)
+    {
+        // Handle user input here
+        // You can execute commands, perform actions, etc.
+        terminalState.NewLine($"You entered: {input}");
+    }
+}
